--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <!-- Open Graph (OG) Meta Tags -->
   <meta property="og:title" content="Anush Krishna - Portfolio" />
   <meta property="og:description" content="Java Backend Developer | Spring Boot, Kafka, Redis, PostgreSQL" />
+  <meta property="og:url" content="https://career-crest-frontend-anush-krishnas-projects.vercel.app" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:title" content="Anush Krishna - Portfolio" />
   <meta name="twitter:description" content="Java Backend Developer | Spring Boot, Kafka, Redis, PostgreSQL" />
 </head>
+
