--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anush Krishna - Portfolio</title>
-
-  <!-- Open Graph (OG) Meta Tags -->
-  <meta property="og:title" content="Anush Krishna - Portfolio" />
-  <meta property="og:description" content="Java Backend Developer | Spring Boot, Kafka, Redis, PostgreSQL" />
-  <meta property="og:url" content="https://career-crest-frontend-anush-krishnas-projects.vercel.app" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:title" content="Anush Krishna - Portfolio" />
-  <meta name="twitter:description" content="Java Backend Developer | Spring Boot, Kafka, Redis, PostgreSQL" />
 </head>
-
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
+</html>
